# test_of_external_pass

./: Cargo.toml  README.md
src/: main.rs
