[package]
name = "using-external-pass"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7.0"
lm3s6965 = "0.2"
cortex-m-semihosting = "0.3.3"
systick-monotonic = "1.0.0"
heapless = "0.7.7"
bare-metal = "1.0.0"
external_rtic_pass = {git = "https://github.com/01joja/external_rtic_pass"}


[dependencies.cortex-m-rtic]
# path = "../modular_rtic"
git = "https://github.com/01joja/cortex-m-rtic"
branch = "modular"


[dependencies.panic-semihosting]
features = ["exit"]
version = "0.5.2"

[target.x86_64-unknown-linux-gnu.dependencies]
trybuild = "1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(have_basepri)'] }


[patch.crates-io]
lm3s6965 = { git = "https://github.com/japaric/lm3s6965" }
